<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_baseline_logout_24"
        android:layout_alignParentEnd="true"
        android:layout_margin="25dp"
        android:visibility="gone"
        android:tooltipText="Logout"
        android:id="@+id/logout"
        tools:ignore="ContentDescription,UnusedAttribute" />


    <View
        android:id="@+id/topleftoval"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/top_left_corner_oval"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Women Safety"
        android:layout_above="@id/relativeLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:fontFamily="cursive"
        android:textSize="40sp"
        tools:ignore="HardcodedText" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:id="@+id/relativeLayout"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">



        <LinearLayout
            android:gravity="center"
            android:layout_marginRight="50dp"
            android:id="@+id/first"
            android:layout_width="150dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_height="150dp"
            android:background="@drawable/oval_purple_full"
            android:orientation="vertical"
            tools:ignore="RtlHardcoded">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/contact"
                tools:ignore="ContentDescription,ImageContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/contact"
                android:textColor="#311B92" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:id="@+id/second"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_toRightOf="@id/first"
            android:background="@drawable/oval_purple_full"
            tools:ignore="RtlHardcoded">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_message_24"
                tools:ignore="ContentDescription,ImageContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sms_alert"
                android:textColor="#311B92" />

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginRight="50dp"
            android:layout_marginTop="50dp"
            android:id="@+id/third"
            android:clickable="true"
            android:focusable="true"
            android:layout_below="@id/first"
            android:layout_width="150dp"
            android:visibility="gone"
            android:gravity="center"
            android:layout_height="150dp"
            android:background="@drawable/oval_purple_full"
            tools:ignore="RtlHardcoded">

            <ImageView
                android:layout_gravity="center"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/settings"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            android:layout_below="@id/second"
            android:id="@+id/fourth"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:layout_width="150dp"
            android:layout_toRightOf="@id/third"
            android:layout_height="150dp"
            android:background="@drawable/oval_purple_full"
            tools:ignore="RtlHardcoded">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/law_image"
                tools:ignore="ContentDescription,ImageContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/basic_laws"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:id="@+id/fifth"
            android:layout_width="150dp"
            android:layout_height="150dp"

            android:layout_marginTop="50dp"
            android:layout_below="@id/second"
            android:clickable="true"
            android:focusable="true"
            android:layout_toRightOf="@id/first"
            android:background="@drawable/oval_purple_full"
            tools:ignore="RtlHardcoded">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/self_defence"
                tools:ignore="ContentDescription,ImageContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/self_defence"
                android:textColor="#311B92" />
        </LinearLayout>



    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/panicBtn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@id/relativeLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:backgroundTint="#FF69B4"
        android:text="@string/panic"
        android:textColor="#311B92"
        android:textSize="18sp"
        app:cornerRadius="100dp" />


</RelativeLayout>